--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.post-content h1 {
+  font-size: 2.25rem; /* adjust as needed */
+  font-weight: bold;
+}
+
+.post-content h2 {
+  font-size: 1.875rem; /* adjust as needed */
+  font-weight: bold;
+}
+
+.post-content h3 {
+  font-size: 1.3rem; /* adjust as needed */
+  font-weight: medium;
+  padding-top: 24px;
+  padding-bottom: 8px;
+}
+
+.post-content p {
+  color: rgb(50, 50, 50);
+}
